Added srcset options to test Picture fill (Chapter 2.3 Completed)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <figure class="featured-image">
                 <img 
                      src="images/original.jpg"
+                     srcset="images/small.jpg 600w, images/medium.jpg 800w, images/large.jpg 1200w, images/extralarge.jpg 1600w"
                      alt="Cherry Blossom in bloom"
                 >
                 <figcaption class="image-caption">
