--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                              images/medium.jpg 800w,
                              images/large.jpg 1200w,
                              images/extralarge.jpg 1600w"
+                     sizes="(min-width: 48em) 800px, 100vw"
                      alt="Cherry Blossom in bloom"
                 >
                 <figcaption class="image-caption">
