Targeted pixel density with x in grid (3.8 completed)

--- a/grid.html
+++ b/grid.html
@@ -25,10 +25,8 @@
                     <img 
                          src="images/original.jpg"
                          alt="Cherry Blossom in bloom"
-                         srcset="images/small.jpg 600w,
-                                 images/medium.jpg 800w,
-                                 images/large.jpg 1200w,
-                                 images/extralarge.jpg 1600w"
+                         srcset="images/small.jpg 1x,
+                                 images/large.jpg 2x"
                          sizes="(min-width: 40em) 250px, 
                                 (min-width: 30em) calc(50vw - 1em),
                                 100vw"
